refactor: update author annotations - Cleaned up documentation comments across the codebase. - Removed unused imports and improved code readability